# pre-commit-workshop

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
src/: example.py
src/custom_hook/: check.py
src/prefix-check/: cli.py
src/prefix_check/: __init__.py  check.py  cli.py
