[project]
name = "prefix-check"
version = "0.1.0"
authors = [{name = "Juan Caraballo", email = "juan.caraballo17@gmail.com"},]
description = "A pre-commit hook to validate the filenames prefix."
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
]  # TODO: declare any dependencies

# TODO: update `your-script-name` with the name of your choice
# TODO: update `pkg.module:function` to point to your function
scripts.your-script-name = "prefix-check.cli:main"

[dependency-groups]
dev = [
    "pre-commit",  # so you can run hooks on the codebase
    "ruff>=0.12.5",
    # "pytest",  # remember to add tests for your hook
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear rules
    "E", # pycodestyle error rules
    "F", # pyflakes rules
    "I", # isort rules
    "W", # pycodestyle warning rules
]
ignore = [
    "E501", # line-too-long
]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
